2009-10-15  Sancho lerena <slernea@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Fixed small problem in snmp2agent
	forwarding and better implementation of server error control.
	Also solved problem with duplicated traps in SNMP console.

	* lib/PandoraFMS/Server.pm: better implementation of server error control.

	* lib/PandoraFMS/Core.pm: SNMP alerts now show the IP in _agent_ macro 

	* lib/PandoraFMS/Tools.pm: Better management of enterprise_hook on 
	opensource version. 

	* util/alert_multicast.pl: Added sample of alert script for render
	alerts as multicast XML.

2009-10-13  Sancho Lerena <slerena@artica.es>

	* util/pandora_server: Incremented shutting down grace time to 60 secs
	because in some systems could take a lot of time to close all threads.

	* conf/pandora_server.conf: Better defaults for Pandora FMS server default 
	install. 

	* Config.pm: Hey, this is officially RC1....

	* pandora_server_installer: Fixed usage of old pathnames /usr/share/pandora
	Fixed name of pandora_db cron.daily entry.
	
	* bin/pandora_server: Multicast status report now report each 30 x 
	server_threshold. 
	
	* lib/Core.pm: Alert event now show more information (module name). Alert
	messages like XXX going down to / going up from are replaced by more 
	simple "going to CRITICAL/NORMAL/WARNING", I hope this will be more clear.

2009-10-09  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm, bin/pandora_server: Re-enabled multicast
	  reports (Enterprise feature).

2009-10-09  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Server.pm, bin/pandora_server: Small fixes to avoid
	  warnings.

2009-10-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/DataServer.pm: Reverted the way enterprise functions
	  are called.

	* lib/PandoraFMS/Server.pm
	  lib/PandoraFMS/ProducerConsumerServer.pm: Handle fatal errors and
	  save error messages (useful for console event generation).

	* lib/PandoraFMS/Tools.pm: Improved enterprise_hook.
